2010-02-14 Harri Pitkänen <hatapitk@iki.fi>
	* Replace uses of iswupper and towupper with locale independent implementation.

2010-02-13 Harri Pitkänen <hatapitk@iki.fi>
	* Increase version numbers for 2.3.1.

2010-02-11 Andris Pavenis <andris.pavenis@iki.fi>
	* Updated MSVC project file.

2010-02-11 Harri Pitkänen <hatapitk@iki.fi>
	* Replace uses of towlower with locale independent implementation.

2010-02-10 Harri Pitkänen <hatapitk@iki.fi>
	* Add virtual destructors for Speller and Hyphenator.

2010-01-30 Harri Pitkänen <hatapitk@iki.fi>
	* Python interface: Make Dictionary objects hashable.

2010-01-27 Harri Pitkänen <hatapitk@iki.fi>
	* Fix Python bindings to work with Python 3.

2010-01-02 Harri Pitkänen <hatapitk@iki.fi>
	* Remove dependency on glib.

2010-01-01 Harri Pitkänen <hatapitk@iki.fi>
	* Import UTF8-CPP version 2.2.4 from
	  https://sourceforge.net/projects/utfcpp

2009-12-31 Harri Pitkänen <hatapitk@iki.fi>
	* Support verb mood in morphological analysis.

2009-12-27 Harri Pitkänen <hatapitk@iki.fi>
	* No longer return "none" as a value for "SIJAMUOTO".

2009-12-26 Harri Pitkänen <hatapitk@iki.fi>
	* Support verb person in morphological analysis.

2009-12-13 Harri Pitkänen <hatapitk@iki.fi>
	* Support grammatical number in morphological
	  analysis.
	* Fix capitalization of base forms in analysis results.

2009-12-12 Harri Pitkänen <hatapitk@iki.fi>
	* Support multiple paragraph checking in Python
	  grammar checking API.

2009-11-26 Harri Pitkänen <hatapitk@iki.fi>
	* Add hyphenator factory.

2009-11-22 Harri Pitkänen <hatapitk@iki.fi>
	* Remove unnecessary header hyphenator.hpp.

2009-11-21 Harri Pitkänen <hatapitk@iki.fi>
	* Add documentation for morphological analyzer.

2009-11-15 Harri Pitkänen <hatapitk@iki.fi>
	* Accept "A-rapussa" in grammar checker.
	* Read speller configuration from dictionary description.
	* Add SpellerFactory.
	* Add my name and GPL license text to Malaga source files